k3s/otterwiki/otterwiki.yml
apiVersion: v1
kind: Namespace
metadata:
  name: otterwiki
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otterwiki
  namespace: otterwiki
  labels:
    app: otterwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otterwiki
  template:
    metadata:
      labels:
        app: otterwiki
    spec:
      containers:
        - name: otterwiki
          image: redimp/otterwiki:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: otter-volume
              mountPath: /app-data
      volumes:
        - name: otter-volume
          persistentVolumeClaim:
            claimName: otter-wiki-pvc
