k3s/otterwiki/service.yml
kind: Service
apiVersion: v1
metadata:
  name: otter-int-svc
  namespace: otterwiki
spec:
  type: ClusterIP
  selector:
    app: otterwiki
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
