k3s/otterwiki/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otter-ing-traefik
  namespace: otterwiki
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "wiki.bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otter-int-svc
            port:
              number: 80
